--- a/sheep/templates/sheep/sheep_list.html
+++ b/sheep/templates/sheep/sheep_list.html
@@ -39,9 +39,9 @@
                 <table class="table table-hover">
                     <thead>
                         <tr>
-                            <th>Tag #</th>
-                            <th>Name</th>
+                            <th>Tag # (Name)</th>
                             <th>Gender</th>
+                            <th>Mother</th>
                             <th>Breed</th>
                             <th>Status</th>
                             <th>Birth Date</th>
@@ -51,9 +51,9 @@
                     <tbody>
                         {% for sheep in sheep_list %}
                             <tr>
-                                <td><a href="{% url 'sheep-detail' sheep.id %}">{{ sheep.tag_number }}</a></p></td>
-                                <td>{{ sheep.name|default:"-" }}</td>
+                                <td><a href="{% url 'sheep-detail' sheep.id %}">{{ sheep.tag_number }} ({{ sheep.name|default:"" }})</a></p></td>
                                 <td>{{ sheep.get_gender_display }}</td>
+                                <td>{{ sheep.tag_number }} ({{ sheep.mother.name|default:"" }})</td>
                                 <td>{{ sheep.breed.name }}</td>
                                 <td>
                                     <span class="badge {% if sheep.status == 'ACTIVE' %}bg-success
@@ -64,7 +64,7 @@
                                         {{ sheep.get_status_display }}
                                     </span>
                                 </td>
-                                <td>{{ sheep.birth_date|date:"M d, Y"|default:"-" }}</td>
+                                <td>{{ sheep.date_of_birth|date:"M d, Y"|default:"" }}</td>
                                 <td>
                                     <div class="btn-group" role="group">
                                         <a href="{% url 'sheep-detail' sheep.id %}" class="btn btn-sm btn-info">
