--- a/sheep/templates/sheep/sheep_list.html
+++ b/sheep/templates/sheep/sheep_list.html
@@ -53,7 +53,7 @@
                             <tr>
                                 <td><a href="{% url 'sheep-detail' sheep.id %}">{{ sheep.tag_number }} ({{ sheep.name|default:"" }})</a></p></td>
                                 <td>{{ sheep.get_gender_display }}</td>
-                                <td>{{ sheep.tag_number }} ({{ sheep.mother.name|default:"" }})</td>
+                                <td>{% if sheep.mother %}{{ sheep.mother.tag_number }} ({{ sheep.mother.name|default:"" }}){% endif %}</td>
                                 <td>{{ sheep.breed.name }}</td>
                                 <td>
                                     <span class="badge {% if sheep.status == 'ACTIVE' %}bg-success
