--- a/sheep/templates/sheep/sheep_list.html
+++ b/sheep/templates/sheep/sheep_list.html
@@ -39,7 +39,30 @@
                 <table class="table table-hover">
                     <thead>
                         <tr>
-                            <th>Tag # (Name)</th>
+                            <th>
+                                <a href="?{% if current_status %}status={{ current_status }}&amp;{% endif %}sort={% if current_sort == 'tag_number' and current_sort_dir == 'asc' %}-tag_number{% else %}tag_number{% endif %}">
+                                    Tag # (Name)
+                                    {% if current_sort == 'tag_number' %}
+                                        {% if current_sort_dir == 'asc' %}
+                                            <i class="fas fa-sort-up"></i>
+                                        {% else %}
+                                            <i class="fas fa-sort-down"></i>
+                                        {% endif %}
+                                    {% endif %}
+                                </a>
+                            </th>
+                            <th>
+                                <a href="?{% if current_status %}status={{ current_status }}&amp;{% endif %}sort={% if current_sort == 'created_at' and current_sort_dir == 'asc' %}-created_at{% else %}created_at{% endif %}">
+                                    Date Added
+                                    {% if current_sort == 'created_at' %}
+                                        {% if current_sort_dir == 'asc' %}
+                                            <i class="fas fa-sort-up"></i>
+                                        {% else %}
+                                            <i class="fas fa-sort-down"></i>
+                                        {% endif %}
+                                    {% endif %}
+                                </a>
+                            </th>
                             <th>Gender</th>
                             <th>Mother</th>
                             <th>Breed</th>
@@ -52,6 +75,7 @@
                         {% for sheep in sheep_list %}
                             <tr>
                                 <td><a href="{% url 'sheep-detail' sheep.id %}">{{ sheep.tag_number }} ({{ sheep.name|default:"" }})</a></p></td>
+                                <td>{{ sheep.created_at|date:"M d, Y" }}</td>
                                 <td>{{ sheep.get_gender_display }}</td>
                                 <td>{% if sheep.mother %}{{ sheep.mother.tag_number }} ({{ sheep.mother.name|default:"" }}){% endif %}</td>
                                 <td>{{ sheep.breed.name }}</td>
